/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the application plugin to add support for building a CLI application.
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'

}

mainClassName = 'streetsim.ui.StreetSimApp'
run {
    applicationDefaultJvmArgs = ['-Xmx4096m']
}

tasks.withType(JavaExec) {
    jvmArgs = ['-Xmx4096m']
}

group 'de.hsrm.mi.swt.01'
version '1.0-SNAPSHOT'


javafx {
    version = "11.0.2"
    modules = ['javafx.controls', 'javafx.fxml']
}

sourceCompatibility = 11

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

dependencies {
    // a dependency on Jackson Databind
    implementation 'com.google.code.gson:gson:2.8.6'
    compile group: 'org.hildan.fxgson', name: 'fx-gson', version: '3.1.2'
    // Use JUnit Jupiter API for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    // Use JUnit Jupiter Engine for testing.
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
}


test {
    // Use junit platform for unit tests
    useJUnitPlatform()
}
